# zacc

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeCommons  CMakeCommons.cmake  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  LICENSE  README.md  __CMakeLists.txt  appveyor.yml  genindex.html  gorynych.sln  index.html  objects.inv  search.html  searchindex.js
codegen/: CMakeLists.txt  codegen.py
codegen/backend/: CMakeLists.txt  CmakeLists.txt
codegen/backend/avx/: CMakeLists.txt  float32.hpp.yml  float64.hpp.yml  int16.hpp.yml  int32.hpp.yml  int8.hpp.yml
codegen/backend/avx2/: CMakeLists.txt  CmakeLists.txt  float32.hpp.yml  float64.hpp.yml  int16.hpp.yml  int32.hpp.yml  int8.hpp.yml
codegen/backend/avx512/: CMakeLists.txt  CmakeLists.txt  float32.hpp.yml  float64.hpp.yml  int16.hpp.yml  int32.hpp.yml  int8.hpp.yml
codegen/backend/scalar/: CMakeLists.txt  CmakeLists.txt  float32.hpp.yml  float64.hpp.yml  int16.hpp.yml  int32.hpp.yml  int8.hpp.yml
codegen/backend/sse/: CMakeLists.txt  float32.hpp.yml  float64.hpp.yml  int16.hpp.yml  int32.hpp.yml  int8.hpp.yml
codegen/codegen/: arguments.py  ast.py  codegen.py  codegen_old.py  common.py  functions.py  lexer.py  modules.py  parser.py  renderer.py  renderer2.py  types.py
codegen/codegen/test/: int32.hpp.yml  test_arguments.py  test_functions.py  test_lexer.py  test_parser.py
codegen/config/: type.test.yml
codegen/engine/: codegen.py  codegen_old.py  type.py
codegen/templates/: type.impl.jinja  type.impl.jinja2  type.test.jinja  type.test.jinja2
dependencies/: CMakeLists.txt  CmakeLists.txt  fetch_asyncplusplus.cmake  fetch_gtests.cmake
doc/: CMakeLists.txt  Doxyfile.conf  Doxyfile.conf.in  Doxyfile.in  conf.py  doxy-boot.js  fetch-doxygen-bootstrap.cmake  footer.html  header.html  setup.py
doc/htmldoc/: algorithm_8hpp_source.html  annotated.html  arithmetic_8hpp_source.html  avx2_2int16_8impl_8hpp_source.html  avx2_2int32_8impl_8hpp_source.html  avx2_2int8_8impl_8hpp_source.html  avx2_2types_8hpp_source.html  avx512_2float32_8impl_8hpp_source.html  avx512_2float64_8impl_8hpp_source.html  avx512_2int16_8impl_8hpp_source.html  avx512_2int32_8impl_8hpp_source.html  avx512_2int8_8impl_8hpp_source.html  avx512_2types_8hpp_source.html  avx_2float32_8impl_8hpp_source.html  avx_2float64_8impl_8hpp_source.html  avx_2types_8hpp_source.html  bithacks_8hpp_source.html  bitwise_8hpp_source.html  bitwise__shift_8hpp_source.html  capabilities_8hpp_source.html  classcodegen_1_1Arg-members.html  classcodegen_1_1Arg.html  classcodegen_1_1Args-members.html  classcodegen_1_1Args.html  classcodegen_1_1Body-members.html  classcodegen_1_1Body.html  classcodegen_1_1Func-members.html  classcodegen_1_1Func.html  classcodegen_1_1Init-members.html  classcodegen_1_1Init.html  classcodegen_1_1Inits-members.html  classcodegen_1_1Inits.html  classcodegen_1_1Module-members.html  classcodegen_1_1Module.html  classcodegen_1_1Struct-members.html  classcodegen_1_1Struct.html  classcodegen_1_1Type-members.html  classcodegen_1_1Type.html  classcodegen_1_1YamlParser-members.html  classcodegen_1_1YamlParser.html  (+947 more)
doc/htmldoc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+52 more)
docs/: CMakeLists.txt  Makefile  conf.py  conf.py.in  index.rst
examples/: CMakeLists.txt  branch_entrypoint.cpp  branch_entrypoint.hpp  dispatcher.hpp  entrypoint.cpp  entrypoint.hpp  examples.cpp  kernel.hpp  kernels.cpp
examples/hosts/: host.hpp  julia.hpp  mandelbrot.hpp
examples/include/: host.hpp
examples/interfaces/: julia.hpp  mandelbrot.hpp
examples/julia/: CMakeLists.txt
examples/julia/include/: julia.host.hpp
examples/julia/src/: julia.cpp  kernels.cpp
examples/kernels/: julia.hpp  mandelbrot.hpp  mandelbrot_scheme.hpp
examples/mandelbrot/: CMakeLists.txt
examples/mandelbrot/include/: kernel.hpp  mandelbrot.host.hpp  mandelbrot_engine.hpp
examples/mandelbrot/src/: kernels.cpp  mandelbrot.cpp
examples/perlin/: CMakeLists.txt
examples/perlin/include/: perlin_engine.hpp
examples/perlin/src/: examples_perlin_entrypoint.cpp  perlin_branch_entrypoint.cpp
gorynych-test/: CMakeLists.txt  catch_entry_point.cpp  test_base_functions.cpp  test_cl_codegen.cpp  test_extensions.h  test_fastload_float.cpp  test_fastload_int.cpp  test_float.cpp  test_int.cpp  test_matrix.cpp  test_trigonometry.cpp
src/: CMakeLists.txt  cpuid.cpp  dispatcher.cpp  dl.cpp  dllmain.cpp  dlloader.cpp  platform.cpp  platform_detector.cpp  runtime_loader.cpp  test_entry_point.cpp  test_main.cpp
test/: CMakeLists.txt  TestFastloadConstants.cpp  TestOperations.cpp  casting.cpp  fetch_gtests.cmake  gtest_ext.hpp  playground.cpp  stdafx.cpp  stdafx.h  targetver.h  test.vcxproj  test.vcxproj.filters  test_entry_point.cpp  test_main.cpp  test_matrix.cpp  test_trigonometry.cpp  tests.cmake
test/backend/avx/: float32.test.cpp  float64.test.cpp  int16.test.cpp  int32.test.cpp  int8.test.cpp
test/backend/avx2/: float32.test.cpp  float64.test.cpp  int16.test.cpp  int32.test.cpp  int8.test.cpp
test/backend/avx512/: float32.test.cpp  float64.test.cpp  int16.test.cpp  int32.test.cpp  int8.test.cpp
test/backend/scalar/: float32.test.cpp  float64.test.cpp  int16.test.cpp  (+2 more)
test/include/: gtest.extensions.hpp  gtest.hpp  gtest.kernel.hpp  test.hpp  test.kernel.hpp  test_host.hpp  test_kernel.hpp
test/math/: test_complex.cpp  test_matrix.cpp  test_trigonometry.cpp
test/src/: compute.cpp  expression.cpp  expressions.cpp  kernels.cpp  test_host.cpp
test/traits/: arithmetic.cpp  bitwise.cpp  bitwise_shift.cpp  comparable.cpp  comparison.cpp  conditional.cpp  io.cpp  logical.cpp  math.cpp
test/util/: type_traits.cpp
(+2897 files in other folders)
